@@ -4,13 +4,13 @@ import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.example.gc_coffee.Exception.AlreadyExistsException;
-import org.example.gc_coffee.dto.ProductDto;
+import org.example.gc_coffee.dto.request.ProductReqDto;
+import org.example.gc_coffee.dto.response.ProductResDto;
 import org.example.gc_coffee.entity.Product;
 import org.example.gc_coffee.repository.ProductRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Map;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -22,20 +22,13 @@ public class ProductServiceImpl implements ProductService {
     private final ProductRepository productRepository;
 
     @Override
-    public ProductDto getProductByNames(String name) {
+    public ProductResDto getProductByNames(String name) {
         try {
             Product product = productRepository.findByName(name)
                     .orElseThrow(EntityNotFoundException::new);
 
-            return ProductDto.builder()
-                    .id(product.getId())
-                    .name(product.getName())
-                    .category(product.getCategory())
-                    .price(product.getPrice())
-                    .description(product.getDescription())
-                    .createdAt(product.getCreatedAt())
-                    .updatedAt(product.getUpdatedAt())
-                    .build();
+            // 엔티티에서 DTO로 변환하는 메서드 사용
+            return ProductResDto.from(product);
         } catch (EntityNotFoundException e) {
             log.error("Product not found with name: {}", name, e);
             throw e;
@@ -46,44 +39,31 @@ public class ProductServiceImpl implements ProductService {
     }
 
     @Override
-    public List<ProductDto> getAllProducts() {
+    public List<ProductResDto> getAllProducts() {
         try {
             List<Product> products = productRepository.findAll();
 
+            // 엔티티 리스트를 DTO 리스트로 변환
             return products.stream()
-                    .map(product -> ProductDto.builder()
-                            .id(product.getId())
-                            .name(product.getName())
-                            .category(product.getCategory())
-                            .price(product.getPrice())
-                            .description(product.getDescription())
-                            .createdAt(product.getCreatedAt())
-                            .updatedAt(product.getUpdatedAt())
-                            .build())
-                    .collect(Collectors.toList());
+                    .map(ProductResDto::from)
+                    .toList();
         } catch (Exception e) {
             log.error("Error occurred while fetching all products", e);
             throw e;
         }
     }
 
-    // 서비스 클래스 내 메서드
     @Override
-    public void registerProduct(ProductDto productDto) {
+    public void registerProduct(ProductReqDto productReqDto) {
         try {
             // 이미 동일한 이름의 제품이 존재하는지 확인
-            boolean exists = productRepository.existsByName(productDto.getName());
+            boolean exists = productRepository.existsByName(productReqDto.name());
             if (exists) {
                 throw new AlreadyExistsException("Product with this name already exists.");
             }
 
-            Product product = Product.builder()
-                    .id(UUID.randomUUID()) // 새 제품 등록이므로 새로운 UUID 생성
-                    .name(productDto.getName())
-                    .category(productDto.getCategory())
-                    .price(productDto.getPrice())
-                    .description(productDto.getDescription())
-                    .build();
+            // DTO에서 엔티티로 변환하는 메서드 사용
+            Product product = productReqDto.toEntity();
 
             productRepository.save(product);
             log.info("Product registered successfully with ID: {}", product.getId());
@@ -97,11 +77,9 @@ public class ProductServiceImpl implements ProductService {
     }
 
     @Override
-    public Map<UUID, Product> getProductByIds(List<UUID> productIds) {
+    public List<Product> getProductByIds(List<UUID> productIds) {
         try {
-            List<Product> products = productRepository.findAllById(productIds);
-            return products.stream()
-                    .collect(Collectors.toMap(Product::getId, product -> product));
+            return productRepository.findAllById(productIds);
         } catch (Exception e) {
             log.error("Error occurred while fetching products by IDs", e);
             throw e;
